# rag-project-server

./: .gitignore  Dockerfile.celery  database.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  tasks.py  test.py
routes/: auth.py  chats.py  files.py  project.py  users.py
services/: s3_service.py
supabase/migrations/: 20251206103206_inital_schema.sql
